# galay-mysql

./: .gitignore  CMakeLists.txt  DOCUMENTATION_VERIFICATION_REPORT.md  README.md
benchmark/: B1-SyncPressure.cc  B2-AsyncPressure.cc  CMakeLists.txt
benchmark/common/: BenchmarkConfig.h
cmake/: GalayMysqlConfig.cmake.in  option.cmake
docs/: 00-快速开始.md  01-快速开始.md  02-架构设计.md  03-API文档.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  05-高级主题.md  06-常见问题.md  07-常见问题.md
example/: CMakeLists.txt
example/common/: ExampleConfig.h
example/import/: E1-AsyncQuery.cc  E2-SyncQuery.cc  E3-AsyncPool.cc  E4-SyncPreparedTx.cc
example/include/: E1-AsyncQuery.cc  E2-SyncQuery.cc  E3-AsyncPool.cc  E4-SyncPreparedTx.cc
examples/: CMakeLists.txt  README.md
examples/import/: E1-AsyncQuery.cc  E3-AsyncPool.cc  E4-SyncPreparedTx.cc  E5-AsyncPipeline.cc
examples/include/: E1-AsyncQuery.cc  E3-AsyncPool.cc  E4-SyncPreparedTx.cc  E5-AsyncPipeline.cc
galay-mysql/: CMakeLists.txt
galay-mysql/async/: AsyncMysqlClient.cc  AsyncMysqlClient.h  MysqlClient.cc  MysqlClient.h  MysqlConnectionPool.cc  MysqlConnectionPool.h
galay-mysql/base/: MysqlError.cc  MysqlLog.h
galay-mysql/module/: ModulePrelude.hpp  galay.mysql.cppm
galay-mysql/protocol/: Connection.cc  Connection.h  MysqlAuth.cc  MysqlAuth.h  MysqlProtocol.cc
galay-mysql/sync/: MysqlClient.cc  MysqlClient.h  MysqlSession.cc  MysqlSession.h
test/: CMakeLists.txt  T1-MysqlProtocol.cc  T2-MysqlAuth.cc  T3-AsyncMysqlClient.cc  T4-SyncMysqlClient.cc  T4-SyncMysqlSession.cc  T5-ConnectionPool.cc  T6-Transaction.cc  T7-PreparedStatement.cc  TestMysqlConfig.h
todo/: todo.md
