cmake_minimum_required(VERSION 3.20)
project(galay-mysql LANGUAGES CXX)

include(cmake/option.cmake)

message(STATUS "GALAY_MYSQL_CXX_STANDARD: ${GALAY_MYSQL_CXX_STANDARD}")
message(STATUS "GALAY_MYSQL_BUILD_TESTS: ${GALAY_MYSQL_BUILD_TESTS}")
message(STATUS "GALAY_MYSQL_BUILD_EXAMPLES: ${GALAY_MYSQL_BUILD_EXAMPLES}")
message(STATUS "GALAY_MYSQL_BUILD_SHARED_LIBS: ${GALAY_MYSQL_BUILD_SHARED_LIBS}")
message(STATUS "GALAY_MYSQL_INSTALL_MODULE_INTERFACE: ${GALAY_MYSQL_INSTALL_MODULE_INTERFACE}")
message(STATUS "GALAY_MYSQL_IMPORT_COMPILATION_ENABLED: ${GALAY_MYSQL_IMPORT_COMPILATION_ENABLED}")
message(STATUS "GALAY_MYSQL_BUILD_MODULE_EXAMPLES: ${GALAY_MYSQL_BUILD_MODULE_EXAMPLES}")
message(STATUS "GALAY_MYSQL_BUILD_MODULE_EXAMPLES_EFFECTIVE: ${GALAY_MYSQL_BUILD_MODULE_EXAMPLES_EFFECTIVE}")

add_subdirectory(galay-mysql)
if(GALAY_MYSQL_BUILD_TESTS)
    add_subdirectory(test)
endif()
if(GALAY_MYSQL_BUILD_EXAMPLES)
    add_subdirectory(example)
endif()
